ibuilder/tests/not_compile/unknown_attribute.stderr
error: unknown attribute
 --> $DIR/unknown_attribute.rs:5:16
  |
5 |     #[ibuilder(wibble_monster = 42)]
  |                ^^^^^^^^^^^^^^

error: unknown attribute
  --> $DIR/unknown_attribute.rs:10:12
   |
10 | #[ibuilder(wibble_monster = 42)]
   |            ^^^^^^^^^^^^^^

error: unknown attribute
  --> $DIR/unknown_attribute.rs:16:12
   |
16 | #[ibuilder(wibble_monster = 42)]
   |            ^^^^^^^^^^^^^^

error: unknown attribute
  --> $DIR/unknown_attribute.rs:23:16
   |
23 |     #[ibuilder(wibble_monster = 42)]
   |                ^^^^^^^^^^^^^^
